src/objects/Admissions_Document__c.object
<CustomObject>
    <fields>
        <fullName>Allow_upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Admissions Documents</relationshipLabel>
        <relationshipName>Admissions_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <formula>HYPERLINK(&quot;/servlet/servlet.FileDownload?file=0693F000000N13pQAC&quot;, &quot;File&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attachment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checklist_Type__c</fullName>
        <label>Checklist Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bethel Online Application</fullName>
                </value>
                <value>
                    <fullName>Royall Online Application</fullName>
                </value>
                <value>
                    <fullName>CollegeNet Application</fullName>
                </value>
                <value>
                    <fullName>Requirement met</fullName>
                </value>
                <value>
                    <fullName>Bethel Paper Application</fullName>
                </value>
                <value>
                    <fullName>Royall Paper Application</fullName>
                </value>
                <value>
                    <fullName>Royall Senior Search Online Application</fullName>
                </value>
                <value>
                    <fullName>Bethel Paper PSEO Application</fullName>
                </value>
                <value>
                    <fullName>Need official transcript</fullName>
                </value>
                <value>
                    <fullName>Bethel Online PSEO Application</fullName>
                </value>
                <value>
                    <fullName>First Contact was Application (Stealth)</fullName>
                </value>
                <value>
                    <fullName>Need official transcript with degree posted</fullName>
                </value>
                <value>
                    <fullName>CASPA Application Materials</fullName>
                </value>
                <value>
                    <fullName>CAS: Incorrect App completed (CAPS)</fullName>
                </value>
                <value>
                    <fullName>Royall Senior Search Paper Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Applicant on Application</description>
        <inlineHelpText>Applicant on Application</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Admissions Documents</relationshipLabel>
        <relationshipName>Admissions_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_to_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display to Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <label>Mandatory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Org_Link__c</fullName>
        <formula>IF( 
NOT(ISBLANK(Previous_Id__c)), 
&quot;https://bethel-university-old.my.salesforce.com/&quot;+ Previous_Id__c, 
&quot;&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Org Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Comments__c</fullName>
        <label>Portal Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Id__c</fullName>
        <description>Previous Id if it exists</description>
        <externalId>true</externalId>
        <label>Previous Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>Conditional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Temp_Cleanup__c</fullName>
        <description>for Type cleanup</description>
        <label>Type Temp Cleanup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Admissions_Document_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unofficial_Received_Date_1__c</fullName>
        <label>Unofficial Received Date 1</label>
        <type>Date</type>
    </fields>
    <label>Admissions Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AD-{0000}</displayFormat>
        <label>AD ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admissions Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>